--- a/index.html
+++ b/index.html
@@ -1,4 +1,46 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Birthday Invite</title>
+</head>
+<body>
+    <H1>Grand Biggest Birthday</H1>
+    <hr/>
+    <h2>Click the image to view our introduction.</h2>
+    <a href = "./public/about.html"> <img src = "./assets/images/Tulips.jpg"/></a>
+    <h2>Here is our Birthday Invite </h2>
+    <h1>It's My Birthday!</h1>
+<h2>On the 12th May</h2>
+
+<img src="./assets/images/Chrysanthemum.jpg"
+  alt="purple birthday cake with candles" />
+
+<h3>What to bring:</h3>
+<ul>
+  <li>Baloons (I love baloons)</li>
+  <li>Cake (I'm really good at eating)</li>
+  <li>An appetite (There will be lots of food)</li>
+</ul>
+
+<h3>This is where you need to go:</h3>
+<a
+  href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google
+  map link</a>
+    <h2>See our Ranking of movie </h2>
+    <img src = "./assets/images/movie-ranking.png"/>
+    <a href = "./public/movie-ranking.html"> click to view code</a>
+    <hr/>
+    <hr/>
+    <a href = "./public/contact.html"> Please Contact Us</a>
+
+</body>
+</html>
+
+<!-- TODO 1: Add !DOCTYPE. -->
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
